fix option menu height issue on mobile. remove mobile injected styling

--- a/src/App.scss
+++ b/src/App.scss
@@ -87,6 +87,7 @@ body {
     text-align: center;
     transition: 0.25s;
     padding: 8px;
+    -webkit-appearance: none;
 
     &:hover,
     &:focus {
